[gd_scene load_steps=5 format=3 uid="uid://nqgolpvgp7yg"]

[ext_resource type="Script" path="res://DTContainer/DTContainer.gd" id="1_juoha"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xj583"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.8, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ks3ld"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.8, 1, 0.8, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ox2pm"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(1, 0.8, 0.6, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="DTContainer" type="VBoxContainer"]
offset_right = 240.0
offset_bottom = 728.0
alignment = 1
script = ExtResource("1_juoha")

[node name="ServicesPanel" type="PanelContainer" parent="."]
z_index = -1
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xj583")

[node name="ServicesContainer" type="HBoxContainer" parent="ServicesPanel"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="ServicesLabel" type="Label" parent="ServicesPanel/ServicesContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Services"

[node name="EnablersPanel" type="PanelContainer" parent="."]
z_index = -1
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ks3ld")

[node name="EnablersContainer" type="HBoxContainer" parent="EnablersPanel"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="EnablersLabel" type="Label" parent="EnablersPanel/EnablersContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Enablers"

[node name="ModelsPanel" type="PanelContainer" parent="."]
z_index = -1
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ox2pm")

[node name="ModelsContainer" type="HBoxContainer" parent="ModelsPanel"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="ModelsLabel" type="Label" parent="ModelsPanel/ModelsContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Models/Data
"
